students/VashchukAnatoliy/task_02/src/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app01
  labels:
    org.bstu.course: RSIOT
    org.bstu.variant: "1"
